# exprify

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: test.yml
exprify/: __init__.py  __main__.py  ast_transformer.py  injections.py  reflow.py  transpile.py
src/: ast_transformer.py  transpile.py
test/: test_reflow.py  test_transpile.py  test_transpile_functions.py  test_transpile_scripts.py  utils.py
test/reflow_outlines/: outline1.txt  outline2.txt
test/test_scripts/: rijndael.py  zipy.py
