[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exprify"
version = "0.0.1"
requires-python = ">=3.11"
authors = [
  {name = "Julius Park", email = "juliusgeo@gmail.com"},
]
maintainers = [
  {name = "Julius Park", email = "juliusgeo@gmail.com"},
]
description = "Translates Python programs using statements into expressions"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
