[project]
name = "exprify"
version = "0.0.1"
requires-python = ">=3.11"
authors = [
  {name = "Julius Park", email = "juliusgeo@gmail.com"},
]
maintainers = [
  {name = "Julius Park", email = "juliusgeo@gmail.com"},
]
description = "Translates Python programs using statements into expressions"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["expressions", "transpiler", "list comprehension"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]
