[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exprify"
version = "0.0.1"
requires-python = ">=3.11"
authors = [
  {name = "Julius Park", email = "juliusgeo@gmail.com"},
]
maintainers = [
  {name = "Julius Park", email = "juliusgeo@gmail.com"},
]
description = "Translates Python programs using statements into expressions"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["expressions", "transpiler", "list comprehension"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[tool.ruff]
exclude = ["exprify/__init__.py"]

[project.scripts]
exprify = "exprify.__main__:main"
